--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ multiplatformsettings = "1.0.0"
 sqldelight = "2.0.0-alpha05"
 kmm-viewmodel = "1.0.0-ALPHA-4"
 kmm-coroutines = "1.0.0-ALPHA-5"
+snapper = "0.3.0"
 
 [libraries]
 
@@ -74,6 +75,7 @@ sqldelight-extensions = { module = "app.cash.sqldelight:coroutines-extensions", 
 
 multiplatformsettings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformsettings" }
 kmm-viewmodel = { module = "com.rickclephas.kmm:kmm-viewmodel-core", version.ref = "kmm-viewmodel" }
+snapper = { module = "dev.chrisbanes.snapper:snapper", version.ref = "snapper" }
 
 [plugins]
 
