--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ sqldelight = "2.0.0-alpha05"
 kmm-viewmodel = "1.0.0-ALPHA-4"
 kmm-coroutines = "1.0.0-ALPHA-5"
 snapper = "0.3.0"
+chart = "1.6.5"
 
 [libraries]
 
@@ -76,6 +77,9 @@ sqldelight-extensions = { module = "app.cash.sqldelight:coroutines-extensions", 
 multiplatformsettings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformsettings" }
 kmm-viewmodel = { module = "com.rickclephas.kmm:kmm-viewmodel-core", version.ref = "kmm-viewmodel" }
 snapper = { module = "dev.chrisbanes.snapper:snapper", version.ref = "snapper" }
+chart = { module = "com.patrykandpatrick.vico:compose", version.ref = "chart" }
+chart-core = { module = "com.patrykandpatrick.vico:core", version.ref = "chart" }
+chart-m3 = { module = "com.patrykandpatrick.vico:compose-m3", version.ref = "chart" }
 
 [plugins]
 
