--- a/ui-picker/build.gradle
+++ b/ui-picker/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation libs.compose.ui
-    implementation libs.compose.material3
-    implementation libs.snapper
+    implementation(libs.compose.ui)
+    implementation(libs.compose.material3)
+    implementation(libs.snapper)
 }
